add post list & detail using CBV

--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -2,7 +2,7 @@
 <h4>Blog</h4>
 
 <ul>
-{% for post in mahmoud %}
+{% for post in object_list %}
 
     <!-- <li> {{post}} - {{post.author}} - {{post.publish_date}} </li> -->
     <li><a href="/posts/{{post.id}}"> {{post}} </a></li>
