--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -1,12 +1,40 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container mt-5" >
+        <div>
+                    
+        <h3> {{post}} </h3>
 
+        <p> {{post.author}} </p>
+        <p> {{post.category}} </p>
 
-<h3> {{post}} </h3>
+        <img src=" {{post.image.url}} " alt="">
 
-<p> {{post.author}} </p>
-<p> {{post.category}} </p>
+        <p>
+            {{post.content | safe}}
+        </p>
+        
+        </div>
+        <div>
+            <h4>Comments</h4>
+            <ul>
+                {% for comment in comments %}
+                    <li> {{comment.user}} - {{comment.comment}} </li>
+                {% empty %}
+                    <li> there are no comments</li>
+                {% endfor %}
+                
+            </ul>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
+</html>
 
-<img src=" {{post.image.url}} " alt="">
-
-<p>
-    {{post.content | safe}}
-</p>
