--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -1,11 +1,30 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Blog</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>
 
-<h4>Blog</h4>
+    <div class="container mt-5">
+        <h4 class="my-3">Blog</h4>
 
-<ul>
-{% for post in object_list %}
+        <ul>
+        {% for post in object_list %}
+    
+            <!-- <li> {{post}} - {{post.author}} - {{post.publish_date}} </li> -->
+            <li><a href="/posts/{{post.id}}"> {{post}} </a></li>
+    
+            {% endfor %}
+        </ul>
+    </div>
 
-    <!-- <li> {{post}} - {{post.author}} - {{post.publish_date}} </li> -->
-    <li><a href="/posts/{{post.id}}"> {{post}} </a></li>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  </body>
+</html>
 
-    {% endfor %}
-</ul>
+
+
+
