--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -23,7 +23,7 @@
         
         </div>
         <div>
-            <h4>Comments</h4>
+            <h4>Comments ({{comments | length}}) </h4>
             <ul>
                 {% for comment in comments %}
                     <li> {{comment.user}} - {{comment.comment}} </li>
@@ -32,6 +32,14 @@
                 {% endfor %}
                 
             </ul>
+
+            <h4> Add New Comment</h4>
+            <form method="post">
+              {% csrf_token %}
+              {{form}}
+              <input type="submit" value="add comment">
+            </form>
+
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
